# OpenExplorer

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  Directory.Build.props  Directory.Build.targets  FastExplorer.sln  OpenExplorer.sln  README.md
apps/FastExplorer.Indexer/: Cargo.toml
apps/FastExplorer.ShellHost/: Cargo.toml
apps/FastExplorer.UI/: App.xaml  App.xaml.cs  FastExplorer.UI.csproj  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
apps/OpenExplorer.Indexer/: Cargo.toml
apps/OpenExplorer.ShellHost/: Cargo.toml
apps/OpenExplorer.ShellHost/src/: main.rs
apps/OpenExplorer.UI/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OpenExplorer.UI.csproj  Package.appxmanifest  app.manifest
benchmarks/: README.md
docs/adr/: 0001-use-winui3-and-rust.md  0002-use-stable-c-abi.md  0003-use-snapshot-model.md  0004-use-provider-based-locations.md  0005-isolate-shellhost.md  0006-isolate-indexer.md  0007-use-versioned-ipc.md  0008-start-with-x64-msvc.md
docs/architecture/: file-operations-v1.md  shell-icon-provider-v1.md
docs/navigation/: navigation-model-v1.md
docs/performance/: 0001-virtualized-details-view.md  README.md
docs/protocols/: README.md  native-abi-v2.md  native-abi-v3.md  native-abi-v4.md  native-abi-v5.md  shellhost-file-operations-v1.md  shellhost-icons-v1.md
rust/explorer-ffi/: Cargo.toml
rust/open-explorer-engine/: Cargo.toml
rust/open-explorer-engine/src/: lib.rs
tests/: README.md
tools/: build.ps1  run.ps1  verify.ps1
(+93 files in other folders)
