[package]
name = "open-explorer-shell-host"
version = "0.1.0"
edition = "2021"

[dependencies]
open-explorer-protocol = { path = "../../rust/open-explorer-protocol" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
