[package]
name = "open-explorer-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
open-explorer-domain = { path = "../open-explorer-domain" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem"] }
